# modern-python

./: .gitignore  LICENSE  pyproject.toml
src/modern_python/: console.py  wikipedia.py
tests/: test_console.py
