[tool.poetry]
name = "modern-python"
version = "0.1.0"
description = "The hyper Modern Python Project"
authors = ["Francisco Benavides <francisco.benavides@gmail.com>"]
license = "MIT"
readme = "README"
homepage = "https://github.com/fbenavides69/modern-python"
repository = "https://github.com/fbenavides69/modern-python"
keywords = ["modern", "python"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
coverage = {extras = ["toml"], version = "^5.0.3"}
pytest-cov = "^2.8.1"
pytest-mock = "^2.0.0"

[tool.poetry.scripts]
modern-python = "modern_python.console:main"
[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["modern_python"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

